--- a/GymWare-Frontend/src/bizpro/index.html
+++ b/GymWare-Frontend/src/bizpro/index.html
@@ -66,7 +66,7 @@
 							<li><a href="#about-us">NOSOTROS</a></li>
 							<li><a href="#team-section">NUESTRO EQUIPO</a></li>
 							<li><a href="#pricing-section">PRODUCTOS</a></li>
-							</li>
+							<!-- </li> -->
 							<li><a href="#contact-section">CONTACTO</a></li>
 					     </ul>
 					   </div><!-- /.navbar-collapse -->
@@ -154,7 +154,7 @@
 										data-splitin="none" 
 										data-splitout="none" 
 										data-responsive_offset="on">
-										<a href="contact-us.html" class="project-button hvr-bounce-to-right">Conózcanos</a>
+										<a href="#team-section" class="project-button hvr-bounce-to-right">Conózcanos</a>
 									</div>
 								
 								</li>
@@ -631,7 +631,7 @@
 			<div class="page-middle-banner">
 				<div class="opacity">
 					<h3>INSTALACIONES DE PRIMER NIVEL</h3>
-					<a href="#" class="hvr-bounce-to-right">Saber Más</a>
+					<a href="#contact-section" class="hvr-bounce-to-right">Saber Más</a>
 				</div> <!-- /.opacity -->
 			</div> <!-- /.page-middle-banner -->
 
